--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
 		"typescript": "^5.7.3"
 	},
 	"engines": {
-		"node": "^18 || >=20",
+		"node": "^18.20 || ^20.10 || >=22",
 		"pnpm": "^10"
 	},
 	"private": true
